--- a/travel/index.html
+++ b/travel/index.html
@@ -42,7 +42,7 @@
     <section class="hero-full parallax-section text-light" data-parallax-image="https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7423-v2.jpg" id="hero">
       <div class="page-title">
         <h1 class="text-pop">My <span class="enlarge-1">Favorite</span> Part Was <span class="enlarge-2">Everything</span></h1>
-        <h3 class="alttitle">A Travel Chronicle by Chris Heuberger</h3>
+        <h3 class="alttitle">A Travel Chronicle by <a class="fancy-link" href="https://twitter.com/chrisbup" target="_blank">Chris Heuberger</a></h3>
       </div>
     </section>
 
@@ -136,7 +136,7 @@
       <div class="spacer spacer-medium"></div>
 
       <div class="wrapper">
-        <p class="footer-link align-center"><a href="http://www.chrisheuberger.com">HOME</a></p>
+        <p class="footer-link footer-link-small align-center"><small><a href="http://www.chrisheuberger.com">chrisheuberger.com</a></small></p>
       </div>
 
       <div class="spacer spacer-medium"></div>
