--- a/travel/norway.html
+++ b/travel/norway.html
@@ -39,7 +39,7 @@
 
     <!-- HERO  -->
     <section class="hero-full parallax-section" data-parallax-image="https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7390-v2.jpg" id="hero">
-      <p class="back-button align-center"><a href="index.html">BACK TO TRAVEL</a></p>
+      <!-- <p class="back-button align-center"><a href="index.html">BACK TO TRAVEL</a></p> -->
       <div class="page-title">
         <h1>Bergen, Stalheim, and Olso, Norway</h1>
       </div>
@@ -111,8 +111,9 @@
           <div class='wolf-item'> 
             <div class='wolf-item-inner'> 
               <div class='wolf-media portfolio-media'> 
-                <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_0286-v2.jpg' title=''> 
+                <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_0286-v2.jpg' title='Taken by Jillian and perhaps my favorite photo from all our travels.'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_0286-v2.jpg'></a> 
+                <p class="custom-caption">Taken by Jillian and perhaps my favorite photo from all our travels.</p>
               </div> 
             </div> 
           </div> 
@@ -318,7 +319,7 @@
             </div> 
           </div> 
 
-          <div class='wolf-item'> 
+          <div class='wolf-item margin-top-100'> 
             <div class='wolf-item-inner'> 
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7390-v2.jpg' title=''> 
@@ -503,11 +504,22 @@
             </div> 
           </div> 
 
+          <div class='wolf-item'> 
+            <div class='wolf-item-inner'> 
+              <div class='wolf-media portfolio-media'> 
+                <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7429-v2.jpg' title='Post-hike Fläm beer on a mountain in Stalheim.'> 
+                <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7429-v2.jpg'></a>
+                <p class="custom-caption">Viking-themed brewery in Fläm.</p> 
+              </div> 
+            </div> 
+          </div> 
+
         </div>
       </div>
 
       <div class="wrapper">
-        <p class="footer-link align-center"><a href="index.html">BACK TO TRAVEL</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a href="http://www.chrisheuberger.com">HOME</a></p>
+        <p class="footer-link align-center"><a href="index.html">TRAVEL HOME</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a href="scandinavia.html">SCANDINAVIA</a></p>
+        <p class="footer-link-small align-center"><small><a href="http://www.chrisheuberger.com">chrisheuberger.com</a></small></p>
       </div>
 
       <div class="spacer spacer-medium"></div>
@@ -528,6 +540,11 @@
   <script src="files/js/jquery.lightcase.min.js" type="text/javascript"></script>
   <script src="files/js/jquery.unveil.js" type="text/javascript"></script>
   <script src="files/js/script.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $("img").unveil();
+    });
+  </script>
 
 </body>
 </html>
