--- a/travel/portland-summer-2016.html
+++ b/travel/portland-summer-2016.html
@@ -39,7 +39,7 @@
 
     <!-- HERO  -->
     <section class="hero-full parallax-section" data-parallax-image="https://d1snbyjv506jvs.cloudfront.net/portland-summer-2016/IMG_4961-v2.jpg" id="hero">
-      <p class="back-button align-center"><a href="index.html">BACK TO TRAVEL</a></p>
+      <!-- <p class="back-button align-center"><a href="index.html">BACK TO TRAVEL</a></p> -->
       <div class="page-title">
         <h1>Portland, Oregon<br>July, 2016</h1>
       </div>
@@ -508,7 +508,8 @@
       <div class="spacer spacer-medium"></div>
 
       <div class="wrapper">
-        <p class="footer-link align-center"><a href="index.html">BACK TO TRAVEL</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a href="http://www.chrisheuberger.com">HOME</a></p>
+        <p class="footer-link align-center"><a href="index.html">TRAVEL HOME</a></p>
+        <p class="footer-link-small align-center"><small><a href="http://www.chrisheuberger.com">chrisheuberger.com</a></small></p>
       </div>
 
       <div class="spacer spacer-medium"></div>
@@ -529,6 +530,11 @@
   <script src="files/js/jquery.lightcase.min.js" type="text/javascript"></script>
   <script src="files/js/jquery.unveil.js" type="text/javascript"></script>
   <script src="files/js/script.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $("img").unveil();
+    });
+  </script>
 
 </body>
 </html>
