--- a/travel/scandinavia.html
+++ b/travel/scandinavia.html
@@ -38,8 +38,8 @@
   <div id="page-content">
 
     <!-- HERO  -->
-    <section class="hero-full parallax-section text-light" data-parallax-image="https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7253.jpg" id="hero">
-      <p class="back-button align-center"><a href="index.html">BACK TO TRAVEL</a></p>
+    <section class="hero-full parallax-section text-light" data-parallax-image="https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7253-v2.jpg" id="hero">
+      <!-- <p class="back-button align-center"><a href="index.html">BACK TO TRAVEL</a></p> -->
       <div class="page-title">
         <h1>Scandinavia<br>May, 2017</h1>
       </div>
@@ -55,7 +55,7 @@
           <div class="wolf-item wfull wright wolf-text" data-speed="1.3">
             <div class="wolf-item-inner" style="width:60%;">
               <div class="wolf-media">
-                <img alt="SEO NAME" src="https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_6790.jpg">
+                <img alt="SEO NAME" src="https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_6790-v2.jpg">
               </div>
               <div class="wolf-caption" style="width:50%;">
                 <a class="go-to-there" href="denmark.html">
@@ -69,7 +69,7 @@
           <div class="wolf-item wfull wleft wolf-text scandinavia-bottom" data-speed="1.6">
             <div class="wolf-item-inner" style="width:60%;">
               <div class="wolf-media">
-                <img alt="SEO NAME" src="https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7384.jpg">
+                <img alt="SEO NAME" src="https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7384-v2.jpg">
               </div>
               <div class="wolf-caption" style="width:50%;">
                 <a class="go-to-there" href="norway.html">
@@ -90,7 +90,7 @@
         <div class="spacer spacer-small"></div>
           
         <div class="inline-video" data-type="youtube" data-videoid="l7mlfXnvEsQ">
-          <img src="https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7419.jpg" alt="Scandinavia">
+          <img src="https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7419-v2.jpg" alt="Scandinavia">
         </div>
 
         <div class="spacer spacer-small"></div>
@@ -106,7 +106,8 @@
       <div class="spacer spacer-medium"></div>
 
       <div class="wrapper">
-        <p class="footer-link align-center"><a href="index.html">BACK TO TRAVEL</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a href="http://www.chrisheuberger.com">HOME</a></p>
+        <p class="footer-link align-center"><a href="index.html">TRAVEL HOME</a></p>
+        <p class="footer-link-small align-center"><small><a href="http://www.chrisheuberger.com">chrisheuberger.com</a></small></p>
       </div>
 
       <div class="spacer spacer-medium"></div>
@@ -126,6 +127,11 @@
   <script src="files/js/jquery.wolf.min.js" type="text/javascript"></script>
   <script src="files/js/jquery.lightcase.min.js" type="text/javascript"></script>
   <script src="files/js/script.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $("img").unveil();
+    });
+  </script>
 
 </body>
 </html>
