add images back

--- a/rrbc.html
+++ b/rrbc.html
@@ -32,7 +32,7 @@
   <main class="wrapper">
   <div id="rotating-item-wrapper">
       <img src="images/rrbc/rrbc-1.jpg" class="rotating-item" />
-      <!-- <img src="images/rrbc/rrbc-2.jpg" class="rotating-item" />
+      <img src="images/rrbc/rrbc-2.jpg" class="rotating-item" />
       <img src="images/rrbc/rrbc-3.jpg" class="rotating-item" />
       <img src="images/rrbc/rrbc-4.jpg" class="rotating-item" />
       <img src="images/rrbc/rrbc-5.jpg" class="rotating-item" />
@@ -52,7 +52,7 @@
       <img src="images/rrbc/rrbc-19.jpg" class="rotating-item" />
       <img src="images/rrbc/rrbc-20.jpg" class="rotating-item" />
       <img src="images/rrbc/rrbc-21.jpg" class="rotating-item" />
-      <img src="images/rrbc/rrbc-22.jpg" class="rotating-item" /> -->
+      <img src="images/rrbc/rrbc-22.jpg" class="rotating-item" />
     </div>
     <div class="welcome">
       <h1>Welcome to RadRunBeerClub<sup>®</sup></h1>
