--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <div id='intro'>
         <!-- <span class="close-intro">&times;</span> -->
-        <h3 class='highlight'>Hiya, I&#8217;m a web developer at <a href="http://www.radishlab.com" target="_blank">Radish Lab</a> in Bushwick, Brooklyn. I&#8217;m an environmentalist, history nerd, runner, and fanny pack enthusiast. I&#8217;m into social impact projects, data visualization, typography, all forms of design, science, art, and pretty much every other subject. I also lead <a href="http://www.bushwickbrewingtour.com" target="_blank">The Bushwick Brewing Tour</a>. Nice to meet ya.</h3>
+        <h3 class='highlight'>Hiya, I&#8217;m a web developer at <a href="http://www.radishlab.com" target="_blank">Radish Lab</a> in Bushwick, Brooklyn. I&#8217;m an environmentalist, history nerd, runner, and fanny pack enthusiast. I&#8217;m into social impact projects, data visualization, typography, all forms of design, science, art, and pretty much every other subject. I also lead <a href="http://www.bushwickbrewingtour.com" target="_blank">The Bushwick Brewing Tour</a>. Nice to meet yaz.</h3>
       </div>
       <div class='venn'>
         <h2 class='interests'>INTERESTS</h2>
