--- a/rrbc.html
+++ b/rrbc.html
@@ -55,7 +55,7 @@
       <img src="images/rrbc/rrbc-22.jpg" class="rotating-item" />
     </div>
     <div class="welcome">
-      <h1>Welcome to RadRunBeerClub<sup>®</sup></h1>
+      <h1>Welcome<br>to RadRun<br>BeerClub<sup>®</sup</h1>
     </div>
 </main>
 
