--- a/rrbc.html
+++ b/rrbc.html
@@ -55,7 +55,9 @@
       <img src="images/rrbc/rrbc-22.jpg" class="rotating-item" />
     </div>
     <div class="welcome">
-      <h1>Welcome<br>to RadRun<br>BeerClub<sup>®</sup</h1>
+      <h1 class="title">Welcome</h1>
+      <h1 class="title">to RadRun</h1>
+      <h1 class="title">BeerClub</h1>
     </div>
 </main>
 
@@ -92,6 +94,7 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="javascripts/vendor/jquery-1.11.0.min.js"><\/script>')</script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"></script>
   <script src="javascripts/rrbc-scripts.js"></script>
 </body>
 </html>
