--- a/rrbc.html
+++ b/rrbc.html
@@ -57,7 +57,7 @@
     <div class="welcome">
       <h1 class="title">Welcome</h1>
       <h1 class="title">to RadRun</h1>
-      <h1 class="title">BeerClubs</h1>
+      <h1 class="title">BeerClub</h1>
     </div>
 </main>
 
