--- a/rrbc.html
+++ b/rrbc.html
@@ -55,9 +55,9 @@
       <img src="images/rrbc/rrbc-22.jpg" class="rotating-item" />
     </div>
     <div class="welcome">
-      <h1 class="title">Welcome</h1>
-      <h1 class="title">to RadRun</h1>
-      <h1 class="title">BeerClub</h1>
+      <h1 class="title title-top">Welcome</h1>
+      <h1 class="title title-middle">to RadRun</h1>
+      <h1 class="title title-bottom">BeerClub</h1>
     </div>
 </main>
 
