social media cards

--- a/travel/index.html
+++ b/travel/index.html
@@ -25,6 +25,21 @@
   <!-- FAVICON -->
   <link href="files/uploads/favicon.png" rel="shortcut icon">
 
+  <!-- Open Graph data -->
+  <meta property="og:title" content="My Favorite Part Was Everything" />
+  <meta property="og:url" content="http://www.chrisheuberger.com/travel" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="A Travel Chronicle by Chris Heuberger" />
+  <meta property="og:image" content="https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_7205-v2.jpg" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:creator" content="@chrisbup">
+  <meta name="twitter:title" content="My Favorite Part Was Everything" />
+  <meta name="twitter:description" content="A Travel Chronicle by Chris Heuberger" />
+  <meta name="twitter:url" content="http://www.chrisheuberger.com/travel" />
+  <meta name="twitter:image" content="https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_7205-v2.jpg" />
+
 </head>
 
 <body class="main">
