--- a/travel/index.html
+++ b/travel/index.html
@@ -25,7 +25,7 @@
   <!-- FAVICON -->
   <link href="files/uploads/favicon.png" rel="shortcut icon">
 
-  <!-- Open Graph data -->
+  <!-- Open Graph Data -->
   <meta property="og:title" content="My Favorite Part Was Everything" />
   <meta property="og:url" content="http://www.chrisheuberger.com/travel" />
   <meta property="og:type" content="website" />
