add video, fix lightcase

--- a/travel/index.html
+++ b/travel/index.html
@@ -18,6 +18,7 @@
   <!-- CSS -->
   <link href="files/css/style.css" id="default-style-css" media="all" rel="stylesheet" type="text/css">
   <link href="files/css/wolf.css" id="wolf-css" media="all" rel="stylesheet" type="text/css">
+  <link href="files/css/lightcase.css" id="lightcase-css" media="all" rel="stylesheet" type="text/css">
   <link href="files/css/font-awesome.min.css" id="fontawesome-style-css" media="all" rel="stylesheet" type="text/css">
   <link href="files/css/ionicons.css" id="ionic-icons-style-css" media="all" rel="stylesheet" type="text/css">
   <link href="files/css/mqueries.css" id="mqueries-style-css" media="all" rel="stylesheet" type="text/css">
@@ -151,8 +152,11 @@
       <div class="spacer spacer-medium"></div>
 
       <div class="wrapper">
-        <p class="footer-link footer-link-small align-center"><small><a href="http://www.chrisheuberger.com">chrisheuberger.com</a></small></p>
+        <p class="footer-link align-center"><a href="#ramones" data-rel="lightcase">CLICK HERE FOR ROCK AND ROLL</a></p>
+        <p class="footer-link-small align-center"><small><a href="http://www.chrisheuberger.com">chrisheuberger.com</a></small></p>
       </div>
+
+      <iframe id="ramones" style="display: none;" src="https://player.vimeo.com/video/139133207?color=ffffff&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
       <div class="spacer spacer-medium"></div>
 
