--- a/travel/scandinavia.html
+++ b/travel/scandinavia.html
@@ -18,6 +18,7 @@
   <!-- CSS -->
   <link href="files/css/style.css" id="default-style-css" media="all" rel="stylesheet" type="text/css">
   <link href="files/css/wolf.css" id="wolf-css" media="all" rel="stylesheet" type="text/css">
+  <link href="files/css/lightcase.css" id="lightcase-css" media="all" rel="stylesheet" type="text/css">
   <link href="files/css/font-awesome.min.css" id="fontawesome-style-css" media="all" rel="stylesheet" type="text/css">
   <link href="files/css/ionicons.css" id="ionic-icons-style-css" media="all" rel="stylesheet" type="text/css">
   <link href="files/css/mqueries.css" id="mqueries-style-css" media="all" rel="stylesheet" type="text/css">
