remove Hops and Hocks

--- a/rrbc.html
+++ b/rrbc.html
@@ -68,7 +68,7 @@
   </li>
   <li>
     <h3><span class="step">Step</span><span class="number">2</span></h3>
-    <p>On our way back, we stop by <a href="http://www.hopsandhocks.com/" target="_blank">Hops & Hocks</a> to pick up a mix-and-match 6-pack. (Note that only those on the run get to choose the beer.)</p>
+    <p>On our way back, we stop by a beer shop to pick up a mix-and-match 6-pack. (Note that only those on the run get to choose the beer.)</p>
   </li>
   <li>
     <h3><span class="step">Step</span><span class="number">3</span></h3>
