--- a/rrbc.html
+++ b/rrbc.html
@@ -80,7 +80,7 @@
   </li>
   <li>
     <h3><span class="step">Step</span><span class="number">5</span></h3>
-    <p>When someone chooses a beer to describe, they are given 30 seconds to comment on their chosen beer in the manner of a <a href="https://www.wnyc.org/story/314394-wine-has-sommeliers-now-beer-has-cicerones/" target="_blank">cicerone</a> (or however they like). Demonstartions can be provided.</p>
+    <p>When someone chooses a beer to describe, they are given 30 seconds to comment on their chosen beer in the manner of a <a href="https://www.wnyc.org/story/314394-wine-has-sommeliers-now-beer-has-cicerones/" target="_blank">cicerone</a> (or however they like). Demonstrations can be provided.</p>
   </li>
   <li>
     <h3><span class="step">Step</span><span class="number">6</span></h3>
