--- a/favorite-things.html
+++ b/favorite-things.html
@@ -28,6 +28,7 @@
   <link rel="stylesheet" href="stylesheets/favorite-things.css">
   <script src="javascripts/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.1.0/list.min.js"></script>
   <script src="javascripts/favorite-things.js"></script>
 </head>
 <body>
