add faves links

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -87,15 +87,15 @@
         <div id="search-results">
           <div class="list">
             <div class="package">
-              <span class="name">Item 1</span><br />
+              <span class="name"><a class="faves-link" href="https://www.quantamagazine.org/plunge-into-a-virtual-reality-black-hole-20171204/">If you have that Google Cardboard viewer, this is worth 10 minutes.</a></span><br />
               <span class="category">Category 1</span>
             </div>
             <div class="package">
-              <span class="name">Item 2</span><br />
+              <span class="name"><a class="faves-link" href="https://www.youtube.com/watch?v=KNgA7dDs90E">A fantastic portrayal of graphic design at its best.</a></span><br />
               <span class="category">Category 2</span>
             </div>
             <div class="package">
-              <span class="name">Item 3</span><br />
+              <span class="name"><a class="faves-link" href="https://www.youtube.com/watch?v=KNgA7dDs90E">Some useful data-driven tools to empower tenants in NYC, built by an isnpiring group of civic coders.</a></span><br />
               <span class="category">Category 3</span>
             </div>
           </div>
