--- a/favorite-things.html
+++ b/favorite-things.html
@@ -59,8 +59,9 @@
 
   <div class="main-content">
 
-    <div class='about-format'>
+    <div class='about-format faves-header'>
       <h1 class='about all-caps'>FAVORITE THINGS</h1><br>
+      <p>Note: this list is imperfect and just for fun but I keep it in the hopes that it could be interesting for others and because I don't want to be sucked back into the vortex of social media.</p>
     </div>
 
     <div class="favorite-things">
