--- a/travel/index.html
+++ b/travel/index.html
@@ -97,12 +97,12 @@
           <div class="wolf-item portfolio-wolf-item branding">
             <div class="wolf-item-inner">
               <div class="wolf-media portfolio-media">
-                <a class="wolf-media-link" href="new-orleans.html"><img alt="New Orleans" src="https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5039-v2.jpg"></a>
+                <a class="wolf-media-link" href="new-orleans-2016.html"><img alt="New Orleans" src="https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5039-v2.jpg"></a>
               </div>
               <div class="wolf-caption cbottom portfolio-caption" style="margin-right: 8%">
-                <a class="wolf-caption-link" href="new-orleans.html">
-                <h6 class="new-orleans-header alttitle portfolio-category">New Orleans</h6>
-                <h4 class="new-orleans-subheader portfolio-name">2016</h4></a>
+                <a class="wolf-caption-link" href="new-orleans-2016.html">
+                <h6 class="new-orleans-2016-header alttitle portfolio-category">New Orleans</h6>
+                <h4 class="new-orleans-2016-subheader portfolio-name">2016</h4></a>
               </div>
             </div>
           </div>
@@ -120,7 +120,7 @@
             </div>
           </div>
 
-          <div class="wolf-item portfolio-wolf-item photography">
+          <div class="wolf-item portfolio-wolf-item photography extend-bottom">
             <div class="wolf-item-inner">
               <div class="wolf-media portfolio-media">
                 <a class="wolf-media-link" href="portland-winter-2016.html"><img alt="Portland Winter 2016" src="https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_6176-v2.jpg"></a>
@@ -133,7 +133,7 @@
             </div>
           </div>
 
-          <div class="wolf-item portfolio-wolf-item print">
+          <div class="wolf-item portfolio-wolf-item print extend-bottom">
             <div class="wolf-item-inner">
               <div class="wolf-media portfolio-media">
                 <a class="wolf-media-link" href="scandinavia.html"><img alt="Scandinavia" src="https://d1snbyjv506jvs.cloudfront.net/norway/IMG_0286-v2.jpg"></a>
@@ -142,6 +142,32 @@
                 <a class="wolf-caption-link" href="scandinavia.html">
                 <h6 class="scandinavia-header alttitle portfolio-category">Scandinavia</h6>
                 <h4 class="scandinavia-subheader portfolio-name">2017</h4></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="wolf-item portfolio-wolf-item photography">
+            <div class="wolf-item-inner">
+              <div class="wolf-media portfolio-media">
+                <a class="wolf-media-link" href="new-orleans-2018.html"><img alt="New Orleans 2018" src="https://d1snbyjv506jvs.cloudfront.net/new-orleans-2018/IMG_8847.jpg"></a>
+              </div>
+              <div class="wolf-caption portfolio-caption" style="margin-right: 8%">
+                <a class="wolf-caption-link" href="new-orleans-2018.html">
+                <h6 class="new-orleans-2018-header alttitle portfolio-category">New Orleans</h6>
+                <h4 class="new-orleans-2018-subheader portfolio-name">2018</h4></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="wolf-item portfolio-wolf-item photography">
+            <div class="wolf-item-inner">
+              <div class="wolf-media portfolio-media">
+                <a class="wolf-media-link" href="portland-summer-2018.html"><img alt="Portland Summer 2018" src="https://d1snbyjv506jvs.cloudfront.net/portland-summer-2018/IMG_9627.jpeg"></a>
+              </div>
+              <div class="wolf-caption portfolio-caption" style="margin-bottom:20%;">
+                <a class="wolf-caption-link" href="portland-summer-2018.html">
+                <h6 class="portland-summer-2018-header alttitle portfolio-category">Portland, OR</h6>
+                <h4 class="portland-summer-2018-subheader portfolio-name">Summer 2018</h4></a>
               </div>
             </div>
           </div>
