--- a/travel/new-orleans-2016.html
+++ b/travel/new-orleans-2016.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body class="new-orleans">
+<body class="new-orleans-2016">
 
   <div id="page-loader">
     <div class="page-loader-inner">
