replace http with https

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -33,7 +33,7 @@
 </head>
 <body>
   <!--[if lt IE 7]>
-    <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="http://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
+    <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="https://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
   <![endif]-->
   <div class="sidebar flex-item">
     <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
@@ -47,11 +47,11 @@
       <li><a class='nav' href="play.html">play</a></li> -->
       <br>
       <li><a class='nav' href='https://github.com/ChrisBup' target="_blank">GitHub</a></li>
-      <li><a class='nav' href='http://codepen.io/ChrisBup' target="_blank">CodePen</a></li>
+      <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank">CodePen</a></li>
       <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank">Dribbble</a></li>
       <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></li>
       <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></li>
-      <li><a class='nav' href='http://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
+      <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
       <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" title='chrisheuberg@gmail.com'>email</a></li>
       <li><a class='nav cv-temp' href="#">r&eacute;sum&eacute;</a>&nbsp;<span class='cv-temp-fade'><span class='colorize'>coming soon</span></span></li>
     </ul>
