--- a/play.html
+++ b/play.html
@@ -29,7 +29,7 @@
 </head>
 <body>
   <!--[if lt IE 7]>
-    <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="http://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
+    <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="https://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
     <![endif]-->
     <div class="sidebar">
       <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
@@ -41,11 +41,11 @@
         <li><a class='nav' href="photo.html">photo</a></li>
         <li><a class='nav current' href="play.html">play</a></li><br>
         <li><a class='nav' href='https://github.com/ChrisBup' target="_blank">GitHub</a></li>
-        <li><a class='nav' href='http://codepen.io/ChrisBup' target="_blank">CodePen</a></li>
+        <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank">CodePen</a></li>
         <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank">Dribbble</a></li>
         <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></li>
         <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></li>
-        <li><a class='nav' href='http://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
+        <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
         <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" title='chrisheuberg@gmail.com'>email</a></li>
         <li><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></li>
       </ul>
@@ -60,7 +60,7 @@
         <a class='resume' href="https://www.sketchbookproject.com/library/15335" target="_blank">(3)</a>
       </h2>
       <h2 class="sketchbooks">view
-        <a class="resume" href='http://www.presentationpartynight.com/' target="_blank">PPN</a> presentations
+        <a class="resume" href='https://www.presentationpartynight.com/' target="_blank">PPN</a> presentations
         <a class="resume pres" data-text-swap="(hide)">(show)</a>
       </h2>
       <div class='slide'>
@@ -206,7 +206,7 @@
           <small>
             <span class='license'>
               All work is licensed under a
-              <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+              <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
                 Creative Commons Attribution 4.0 International License.
               </a>
             </span><br>
