--- a/travel/index.html
+++ b/travel/index.html
@@ -12,8 +12,8 @@
 
   <!-- FONTS -->
   <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai" rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet" type="text/css">
 
   <!-- CSS -->
   <link href="files/css/style.css" id="default-style-css" media="all" rel="stylesheet" type="text/css">
@@ -28,7 +28,7 @@
 
   <!-- Open Graph Data -->
   <meta property="og:title" content="My Favorite Part Was Everything" />
-  <meta property="og:url" content="http://www.chrisheuberger.com/travel" />
+  <meta property="og:url" content="https//www.chrisheuberger.com/travel" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="A Travel Chronicle by Chris Heuberger" />
   <meta property="og:image" content="https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_7205-v2.jpg" />
@@ -38,7 +38,7 @@
   <meta name="twitter:creator" content="@chrisbup">
   <meta name="twitter:title" content="My Favorite Part Was Everything" />
   <meta name="twitter:description" content="A Travel Chronicle by Chris Heuberger" />
-  <meta name="twitter:url" content="http://www.chrisheuberger.com/travel" />
+  <meta name="twitter:url" content="https://www.chrisheuberger.com/travel" />
   <meta name="twitter:image" content="https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_7205-v2.jpg" />
 
 </head>
@@ -179,7 +179,7 @@
 
       <div class="wrapper">
         <p class="footer-link align-center"><a href="#ramones" data-rel="lightcase">CLICK HERE FOR ROCK AND ROLL</a></p>
-        <p class="footer-link-small align-center"><small><a href="http://www.chrisheuberger.com">chrisheuberger.com</a></small></p>
+        <p class="footer-link-small align-center"><small><a href="https://www.chrisheuberger.com">chrisheuberger.com</a></small></p>
       </div>
 
       <iframe id="ramones" style="display: none;" src="https://player.vimeo.com/video/139133207?color=ffffff&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
