--- a/travel/new-orleans-2016.html
+++ b/travel/new-orleans-2016.html
@@ -12,7 +12,7 @@
 
   <!-- FONTS -->
   <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai" rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet" type="text/css">
 
   <!-- CSS -->
   <link href="files/css/style.css" id="default-style-css" media="all" rel="stylesheet" type="text/css">
@@ -338,7 +338,7 @@
             <p style=" margin:8px 0 0 0; padding:0 4px;"><a href="https://www.instagram.com/p/BJ_CGSQhsqu/" style=" color:#000; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none; word-wrap:break-word;" target="_blank">Carousel Bar. notable patrons: Tennessee Williams, Hemingway, Faulkner, Capote</a></p>
           </div>
         </blockquote>
-        <script async defer src="http://platform.instagram.com/en_US/embeds.js"></script>
+        <script async defer src="https://platform.instagram.com/en_US/embeds.js"></script>
 
         <div class="spacer spacer-small"></div>
 
@@ -354,7 +354,7 @@
 
       <div class="wrapper">
         <p class="footer-link align-center"><a href="index.html">TRAVEL HOME</a></p>
-        <p class="footer-link-small align-center"><small><a href="http://www.chrisheuberger.com">chrisheuberger.com</a></small></p>
+        <p class="footer-link-small align-center"><small><a href="https://www.chrisheuberger.com">chrisheuberger.com</a></small></p>
       </div>
 
       <div class="spacer spacer-medium"></div>
