--- a/travel/santa-fe.html
+++ b/travel/santa-fe.html
@@ -12,7 +12,7 @@
 
   <!-- FONTS -->
   <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai" rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet" type="text/css">
 
   <!-- CSS -->
   <link href="files/css/style.css" id="default-style-css" media="all" rel="stylesheet" type="text/css">
@@ -555,7 +555,7 @@
 
       <div class="wrapper">
         <p class="footer-link align-center"><a href="index.html">TRAVEL HOME</a></p>
-        <p class="footer-link-small align-center"><small><a href="http://www.chrisheuberger.com">chrisheuberger.com</a></small></p>
+        <p class="footer-link-small align-center"><small><a href="https://www.chrisheuberger.com">chrisheuberger.com</a></small></p>
       </div>
 
       <div class="spacer spacer-medium"></div>
