--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
       <title>Chris Heuberger / Page Not Found</title>
       <link rel="stylesheet" href="stylesheets/normalize.min.css">
       <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
-      <link href='http://fonts.googleapis.com/css?family=Ropa+Sans' rel='stylesheet' type='text/css'>
+      <link href='https://fonts.googleapis.com/css?family=Ropa+Sans' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="stylesheets/styles.css">
 
       <style>
