--- a/development.html
+++ b/development.html
@@ -29,7 +29,7 @@
 </head>
 <body>
   <!--[if lt IE 7]>
-    <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="http://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
+    <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="https://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
   <![endif]-->
   <div class="sidebar">
     <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
@@ -41,11 +41,11 @@
       <li><a class='nav' href="photo.html">photo</a></li>
       <li><a class='nav' href="play.html">play</a></li><br>
       <li><a class='nav' href='https://github.com/ChrisBup' target="_blank">GitHub</a></li>
-      <li><a class='nav' href='http://codepen.io/ChrisBup' target="_blank">CodePen</a></li>
+      <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank">CodePen</a></li>
       <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank">Dribbble</a></li>
       <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></li>
       <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></li>
-      <li><a class='nav' href='http://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
+      <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
       <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" title='chrisheuberg@gmail.com'>email</a></li>
       <li><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></li>
     </ul>
@@ -56,9 +56,9 @@
     <div class='caption'>
       <h3 class="all-caps">PERSONAL PROJECTS</h3>
       <ul class="personal-projects-list">
-        <li class="personal-projects">A crazy long one-page travel log from <a class='about-link' href="http://www.chrisheuberger.com/peru/">my trip to Peru</a>.</li>
-        <li class="personal-projects">My wedding website: <a class='about-link' href="http://www.gtrainlovestory.com/">gtrainlovestory.com</a>.</li>
-        <li class="personal-projects">A prototype for a lifelong record of my niece, <a class='about-link' href="http://www.chrisheuberger.com/jules-timeline/">Jules Nancy Ferrin</a>.</li>
+        <li class="personal-projects">A crazy long one-page travel log from <a class='about-link' href="https://www.chrisheuberger.com/peru/">my trip to Peru</a>.</li>
+        <li class="personal-projects">My wedding website: <a class='about-link' href="https://www.gtrainlovestory.com/">gtrainlovestory.com</a>.</li>
+        <li class="personal-projects">A prototype for a lifelong record of my niece, <a class='about-link' href="https://www.chrisheuberger.com/jules-timeline/">Jules Nancy Ferrin</a>.</li>
       </ul>
     </div>
     <div class='caption'>
@@ -66,9 +66,9 @@
       <p>Curator allows you to search the entire Brooklyn Museum collection, see information about each piece, and curate your own gallery to help plan your visit. It uses Rails 4, PostgreSQL, and The Brooklyn Museum API.</p>
     </div>
     <div class='screenshot'>
-      <a href="http://curator-app.herokuapp.com/" target="_blank"><img src="images/development/curator1.png"></a>
-      <a href="http://curator-app.herokuapp.com/" target="_blank"><img src="images/development/curator2.png"></a>
-      <a href="http://curator-app.herokuapp.com/" target="_blank"><img src="images/development/curator3.png"></a>
+      <a href="https://curator-app.herokuapp.com/" target="_blank"><img src="images/development/curator1.png"></a>
+      <a href="https://curator-app.herokuapp.com/" target="_blank"><img src="images/development/curator2.png"></a>
+      <a href="https://curator-app.herokuapp.com/" target="_blank"><img src="images/development/curator3.png"></a>
     </div>
     <br><hr><br>
     <div class='caption'>
@@ -76,16 +76,16 @@
       <p>Valence is a tool for creating and organizing music playlists and viewing dynamic, animated data visualizations based on song traits like energy, danceability and of course, valence. It uses Rails 4, PostgreSQL, D3, the EchoNest API and the iTunes API.</p>
     </div>
     <div class='screenshot'>
-      <a href="http://valence.herokuapp.com/" target="_blank"><img src="images/development/valence1.png"></a>
-      <a href="http://valence.herokuapp.com/" target="_blank"><img src="images/development/valence2.png"></a>
-      <a href="http://valence.herokuapp.com/" target="_blank"><img src="images/development/valence3.png"></a>
+      <a href="https://valence.herokuapp.com/" target="_blank"><img src="images/development/valence1.png"></a>
+      <a href="https://valence.herokuapp.com/" target="_blank"><img src="images/development/valence2.png"></a>
+      <a href="https://valence.herokuapp.com/" target="_blank"><img src="images/development/valence3.png"></a>
     </div>
     <footer>
       <p>
         <small>
             <span class='license'>
               All work is licensed under a
-              <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+              <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
                 Creative Commons Attribution 4.0 International License.
               </a>
             </span><br>
