--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
   <!--[if lt IE 7]>
-    <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="http://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
+    <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="https://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
   <![endif]-->
 
   <div class="flex-container">
@@ -46,11 +46,11 @@
         <li><a class='nav' href="play.html">play</a></li> -->
         <br>
         <li><a class='nav' href='https://github.com/ChrisBup' target="_blank">GitHub</a></li>
-        <li><a class='nav' href='http://codepen.io/ChrisBup' target="_blank">CodePen</a></li>
+        <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank">CodePen</a></li>
         <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank">Dribbble</a></li>
         <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></li>
         <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></li>
-        <li><a class='nav' href='http://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
+        <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
         <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" title='chrisheuberg@gmail.com'>email</a></li>
         <li><a class='nav cv-temp' href="#">r&eacute;sum&eacute;</a>&nbsp;<span class='cv-temp-fade'><span class='colorize'>coming soon</span></span></li>
       </ul>
@@ -60,7 +60,7 @@
 
       <div id='intro'>
         <!-- <span class="close-intro">&times;</span> -->
-        <h3 class='highlight'>Hiya, I&#8217;m a web developer at <a href="http://www.radishlab.com" target="_blank">Radish Lab</a> in Bushwick, Brooklyn. I&#8217;m an environmentalist, history nerd, runner, and fanny pack enthusiast. I&#8217;m into social impact projects, data visualization, typography, all forms of design, science, art, and pretty much every other subject. I also lead <a href="http://www.bushwickbrewingtour.com" target="_blank">The Bushwick Brewing Tour</a>. Nice to meet ya.</h3>
+        <h3 class='highlight'>Hiya, I&#8217;m a web developer at <a href="https://www.radishlab.com" target="_blank">Radish Lab</a> in Bushwick, Brooklyn. I&#8217;m an environmentalist, history nerd, runner, and fanny pack enthusiast. I&#8217;m into social impact projects, data visualization, typography, all forms of design, science, art, and pretty much every other subject. I also lead <a href="https://www.bushwickbrewingtour.com" target="_blank">The Bushwick Brewing Tour</a>. Nice to meet ya.</h3>
       </div>
       <div class='venn'>
         <h2 class='interests'>INTERESTS</h2>
