--- a/travel/peru/index.html
+++ b/travel/peru/index.html
@@ -3955,11 +3955,11 @@
       <h2>RESOURCES</h2>
 
       <ul>
-        <li class="row"><a href="http://maps.me/en/home" target="_blank" class="resource-link col-sm-2 col-xs-12">Maps.Me</a><span class="resource-span col-xs-9">A nice little map app for traveling without internet access.</span></li>
-        <li class="row"><a href="http://www.awamakistore.org" target="_blank" class="resource-link col-sm-2 col-xs-12">Awamaki</a><span class="resource-span col-xs-9">A fair trade store in Cusco and Ollantaytambo that provides resources to local artisans and helps them sell their products sustainably.</span></li>
-        <li class="row"><a href="http://www.balconcusco.com/en/cusco-hostel-el-balcon" target="_blank" class="resource-link col-sm-2 col-xs-12">El Balcon</a><span class="resource-span col-xs-9">Our hotel in Cusco.</span></li>
-        <li class="row"><a href="http://www.elalbergue.com" target="_blank" class="resource-link col-sm-2 col-xs-12">El Albergue</a><span class="resource-span col-xs-9">Our hotel in Ollantaytambo.</span></li>
-        <li class="row"><a href="http://www.llamapath.com" target="_blank" class="resource-link col-sm-2 col-xs-12">Llama Path</a><span class="resource-span col-xs-9">Our Inca Trail tour company and one of the best ones out there.</span></li>
+        <li class="row"><a href="https://maps.me/en/home" target="_blank" class="resource-link col-sm-2 col-xs-12">Maps.Me</a><span class="resource-span col-xs-9">A nice little map app for traveling without internet access.</span></li>
+        <li class="row"><a href="https://www.awamakistore.org" target="_blank" class="resource-link col-sm-2 col-xs-12">Awamaki</a><span class="resource-span col-xs-9">A fair trade store in Cusco and Ollantaytambo that provides resources to local artisans and helps them sell their products sustainably.</span></li>
+        <li class="row"><a href="https://www.balconcusco.com/en/cusco-hostel-el-balcon" target="_blank" class="resource-link col-sm-2 col-xs-12">El Balcon</a><span class="resource-span col-xs-9">Our hotel in Cusco.</span></li>
+        <li class="row"><a href="https://www.elalbergue.com" target="_blank" class="resource-link col-sm-2 col-xs-12">El Albergue</a><span class="resource-span col-xs-9">Our hotel in Ollantaytambo.</span></li>
+        <li class="row"><a href="https://www.llamapath.com" target="_blank" class="resource-link col-sm-2 col-xs-12">Llama Path</a><span class="resource-span col-xs-9">Our Inca Trail tour company and one of the best ones out there.</span></li>
       </ul>
 
       <img src="img/llama.png" data-src="img/large/inge-morath-1957.jpg" alt="llama in New York" class="inline-pic" />
